--- a/.gitattributes
+++ b/.gitattributes
@@ -5,9 +5,11 @@
 # to native line endings on checkout.
 *.py text eol=lf
 *.rst text eol=lf
+*.md text eol=lf
 *.sh text eol=lf
 *.cpp text eol=lf
 *.hpp text eol=lf
 *.yml text eol=lf
 *.yaml text eol=lf
 *.toml text eol=lf
+*.lock text eol=lf
