--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -2,16 +2,14 @@ name: PR Autolabeler
 
 on:
   pull_request:
-    types: [opened, reopened, synchronize]
+    branches: [main]
+
+permissions: {}
 
 jobs:
   # Auto label PRs during a PR event
   auto-label:
-    runs-on: ubuntu-latest
     permissions:
       contents: read
       pull-requests: write
-    steps:
-      - uses: release-drafter/release-drafter@b1476f6e6eb133afa41ed8589daba6dc69b4d3f5 # v6.1.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    uses: cpp-linter/.github/.github/workflows/labeler.yml@tag-release
